add priority steps to pipeline.yml

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,12 @@
 steps:
   - label: ":hammer: Example Script"
     command: "script.sh"
-    priority: 1
     artifact_paths: "artifacts/*"
     agents:
       queue: "${BUILDKITE_AGENT_META_DATA_QUEUE:-default}"
+  - label: ":hammer: Priority One"
+    command: "echo I Was Originally Priority One"
+    priority: 1
+      queue: "${BUILDKITE_AGENT_META_DATA_QUEUE:-default}"
+  - label: ":hammer: Priority None"
+    command: "echo I Was Originally Priority None"
