--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,8 +4,11 @@ steps:
     artifact_paths: "artifacts/*"
     agents:
       queue: "${BUILDKITE_AGENT_META_DATA_QUEUE:-default}"
+    priority: 0
+  - wait
   - label: "Priority One"
     command: "echo I Was Originally Priority One"
     priority: "1"
   - label: "Priority None"
     command: "echo I Was Originally Priority None"
+  - block: ":shipit: Release"
